Fixed red buttons on mobile version. Split hr in top bar

--- a/develop/wordpress/wp-content/themes/mobile/style.css
+++ b/develop/wordpress/wp-content/themes/mobile/style.css
@@ -263,6 +263,7 @@ hr.light {
 
 .menu-container {
     width: inherit;
+    max-width: 1280px;
     margin: 0px;
 
     /*height: 80px;*/
@@ -289,6 +290,19 @@ hr.light {
 #slide-menu-title {
     padding-top: 15px;
     width: 230px;
+}
+
+.row-hr-topbar {
+    display: flex;
+    width: inherit;
+    z-index: 101;
+}
+.row-hr-menu {
+    flex: 25%;
+}
+.row-hr-content {
+    flex: 75%;
+    margin: 0 0 0 20px;
 }
 
 /* ---------------------------------------- sidebar */
@@ -474,6 +488,13 @@ hr.light {
     }
     #slide-menu-title {
         padding-left: 18px;
+    }
+
+    .row-hr-menu {
+        flex: 85%;
+    }
+    .row-hr-content {
+        flex: 0%;
     }
 
     /* ---------------------------------------- sidebar */
